Add config option "production" for tempest
Pre create TLDs for tempest tests on CI env

Related-Prod: PRODX-29973

Change-Id: If9d4eef5a0b5289dfce2449c824bef9e3f438f95

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -321,6 +321,10 @@ services:
           script: |
             tempest run --config-file /etc/tempest/tempest.conf -w 4 --smoke --blacklist-file  /etc/tempest/test-blacklist
           tempest:
+            DEFAULT:
+              production: true
+            dns:
+              tld_suffix: test
             patrole:
               custom_policy_files: /etc/tempest/policies/%s.json
             sdn:
