--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -317,10 +317,14 @@ services:
           script: |
             tempest run --config-file /etc/tempest/tempest.conf -w 4 --smoke --blacklist-file  /etc/tempest/test-blacklist
           tempest:
+            DEFAULT:
+              production: true
           {%- if ironic_enabled and not ironic_mt_enabled %}
             auth:
               create_isolated_networks: false
           {%- endif %}
+            dns:
+              tld_suffix: test
             heat_plugin:
               image_ref: Fedora-27-1.6
               instance_type: m1.tiny_test
