Enable coordination for Designate
Related-Prod: PRODX-31143
Change-Id: I42bb96664d1c6e6a6e8be2ba6c7fd89cd3b20e8e

--- a/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_policies.yaml
@@ -13,6 +13,8 @@ spec:
             memcache_secret_key: zdLlg6VAsGH6E7tX
             memcache_security_strategy: ENCRYPT
             service_type: dns
+          coordination:
+            backend_url: etcd3+http://etcd:2379
           audit_middleware_notifications:
             driver: noop
           oslo_messaging_notifications:
