--- a/openstack_controller/templates/services/dns.yaml
+++ b/openstack_controller/templates/services/dns.yaml
@@ -2,6 +2,7 @@
 #kind: HelmBundle
 
 {%- from 'macros/messaging_service_creds.j2' import messaging_service_creds %}
+{%- from 'macros/etcd3.j2' import get_etcd3_endpoint %}
 {%- set service = 'designate' %}
 {%- set components_with_dedicated_messaging = spec.get('features', {}).get('messaging', {}).get('components_with_dedicated_messaging', []) %}
 {%- set stacklight_enabled = spec.get('features', {}).get('stacklight', {}).get('enabled', False) %}
@@ -129,6 +130,8 @@ spec:
 {%- endif %}
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
+          coordination:
+            backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
         logging:
           logger_designate:
             level: {{ designate_log_level }}
