Set session inactivity timeout for openidc mod
The default value is 1800 which is the same as the
default timeout SSO Session Idle Keycloak.
Added ability to set this timeout in
"features:keystone:keycloak:oidc" section

Related-Prod: PRODX-30621
Change-Id: I1e992911fe3037ccfe0bf8b75b25d5d203e9bfb8

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -875,6 +875,11 @@ properties:
                     description: |
                       The delimiter to use when setting multi-valued claims (openid-connect or oauth20) in the HTTP
                       headers/environment variables.
+                  OIDCSessionInactivityTimeout:
+                    type: integer
+                    description: |
+                      Interval in seconds after which the session will be invalidated when no interaction has occurred.
+                      default: 1800
           domain_specific_configuration:
             type: object
             additionalProperties: false
