--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_non_sl/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_non_sl/context_spec.yaml
@@ -26,6 +26,7 @@ features:
         OIDCSSLValidateServer: false
         OIDCOAuthSSLValidateServer: false
         OIDCClaimDelimiter: ","
+        OIDCSessionInactivityTimeout: 1800
     domain_specific_configuration:
       enabled: true
       domains:
