--- a/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_non_sl.yaml
+++ b/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_non_sl.yaml
@@ -80,6 +80,7 @@ spec:
               OIDCCryptoPassphrase zQGr6LP7k9wgTBjGF6uJr8Bw0bwKbN1Z
               OIDCSSLValidateServer Off
               OIDCOAuthSSLValidateServer Off
+              OIDCSessionInactivityTimeout "1800"
               OIDCRedirectURLsAllowed ^https://horizon.it.just.works/auth/logout$
               OIDCRedirectURI {{ $keystoneProtocol }}://{{ $keystoneHost }}/v3/OS-FEDERATION/identity_providers/keycloak/protocols/mapped/auth
               OIDCRedirectURI {{ $keystoneProtocol }}://{{ $keystoneHost }}/v3/auth/OS-FEDERATION/websso/
