[rabbitmq] Turn on TLS for external service
Closes-Bug: PRODX-31111
Change-Id: I0f47461e583e1f2bac735c7dbcc1753433e68586

--- a/openstack_controller/templates/services/messaging.yaml
+++ b/openstack_controller/templates/services/messaging.yaml
@@ -191,6 +191,17 @@ spec:
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
         oslo_messaging:
+  {%- if external_notifications_enabled %}
+          host_fqdn_override:
+            external:
+              tls:
+                ca: |
+{{ tls_external_certs.ca_cert | indent(width=18, first=True) }}
+                crt: |
+{{ tls_external_certs.server_cert | indent(width=18, first=True) }}
+                key: |
+{{ tls_external_certs.server_key | indent(width=18, first=True) }}
+  {%- endif %}
           auth:
             user:
               username: {{ admin_creds.messaging.username }}
