Fix Barbican policy template
what was intended as a comment was rendered as part of policy check
string, breaking the policy file loading.

Closes-Issue: PRODX-31271
Change-Id: Ic91a65aeb56a863707d38bd573cee6de7afc8370

--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -457,7 +457,8 @@ services:
               'order:delete': rule:admin_or_creator
             {%- elif openstack_version in ['train', 'ussuri', 'victoria'] %}
               'order:delete': rule:admin_or_creator and project_id:%(target.order.project_id)s
-            {%- else %} # wallaby, xena, yoga. 2023.1 - ?
+            {%- else %}
+              # TODO(pas-ha): re-check validity for 2023.1
               'order:delete': >-
                 rule:admin_or_creator and rule:order_project_match or
                 True:%(enforce_new_defaults)s and rule:order_project_member
