--- a/openstack_controller/templates/native/cache_images.yaml
+++ b/openstack_controller/templates/native/cache_images.yaml
@@ -1,33 +1,9 @@
 - openvswitch_db_server
-- memcached
-- prometheus_mysql_exporter
-- octavia_api
-- dep_check
-- scripted_test
-- error_pages
-- nova_service_cleaner
-- rabbitmq
+- openvswitch_vswitchd
+- nova_compute
 - mariadb
-- powerdns
-- rabbit_init
 - ingress
-- prometheus_memcached_exporter
 - libvirt
-- keystone_api
-- designate_api
-- horizon
-- tempest_run_tests
-- neutron_db_sync
-- placement
-- test
-- cinder_api
-- barbican_db_sync
-- glance_api
-- nova_api
-- ironic_db_sync
-- etcd
-- redis-failover
-- aodh
-- panko
-- ceilometer
-- gnocchi
+- neutron_openvswitch_agent
+- neutron_server
+- neutron_l3
