Handle cephless deployment
* The patch adds support of full cephless deployment.
* Drop internal spec:features:cinder:volume:backend and
  spec:features:cinder:backup:backend
* Introduce a new osdpl flag spec:features:cinder:volume:enabled
  The flag controlls deployment of main volume statefulset. When
  enabled wait for shared ceph secret provided by mirantis ceph
  controller.
* Upgrade cinder components by taking into account if they enabled
  or not

Related-Prod: PRODX-31180
Change-Id: I5a78a11fe2036a0c5212f31c7afff051d4777f4c

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -1376,6 +1376,17 @@ properties:
         type: object
         additionalProperties: false
         properties:
+          volume:
+            type: object
+            additionalProperties: false
+            properties:
+              enabled:
+                type: boolean
+                description: |
+                  Flag to enable main cinder volume running as statefulset.
+                  When enabled openstack-controller will wait for ceph deployment
+                  provided by MOSK Ceph controller. Disable for cephless deployment.
+                  default true
           backup:
             type: object
             additionalProperties: false
@@ -1383,7 +1394,7 @@ properties:
               enabled:
                 type: boolean
                 description: |
-                  Enable cinder backup service
+                  Enable cinder backup service. Disable for cephless deployment.
                   default: true
       logging:
         type: object
