--- a/tests/fixtures/render_service_template/input/ussuri_lvm_lvm_non_dvr/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_lvm_lvm_non_dvr/context_spec.yaml
@@ -20,21 +20,20 @@ features:
         enabled: true
         use_ssl: false
         vault_url: http://vault.openstack-vault.svc:8200
-  cinder:
-    backup:
-      backend: ceph
-    volume:
-      backend: ceph
   database:
     local_volumes:
       enabled: true
   glance:
-    backend: ceph
     backends:
       cinder:
         blockstore:
           default: true
           backend_name: lvm:lvm_fast
+  cinder:
+    backup:
+      enabled: false
+    volume:
+      enabled: false
   messaging:
     components_with_dedicated_messaging:
     - networking
