--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -271,6 +271,8 @@ spec:
         job_drop_default_volume_type: true
         cron_volume_usage_audit: false
         ceph_conf: true
+        job_clean: true
+        statefulset_volume: true
         statefulset_backup: true
       pod:
         affinity:
