--- a/openstack_controller/templates/services/tempest.yaml
+++ b/openstack_controller/templates/services/tempest.yaml
@@ -33,7 +33,11 @@ spec:
         replicas:
           server: 1
       pvc:
+{%- if is_ceph_enabled %}
         storage_class: {{ spec.get('persistent_volume_storage_class', 'default') }}
+{%- else %}
+        storage_class: {{ spec.get('local_volume_storage_class', 'openstack-operator-bind-mounts') }}
+{%- endif %}
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
 {% include 'base/_admin_identity.yaml' %}
