--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_adv/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_adv/context_template_args.yaml
@@ -1,4 +1,5 @@
 block-storage:
+  is_ceph_enabled: true
   ceph:
     cinder:
       keyring: 'AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w==
@@ -40,6 +41,7 @@ block-storage:
         username: testtFQE
   keystone_creds: {}
 compute:
+  is_ceph_enabled: true
   ceph:
     nova:
       keyring: 'AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
@@ -185,6 +187,7 @@ identity:
   credentials_secret_name: keystone-credential-data
   fernet_secret_name: keystone-fernet-data
 image:
+  is_ceph_enabled: true
   ceph:
     glance:
       keyring: 'AQDKZLJfoTtgAhAA7f9e8GriyIpFbj8Ez88l2A==
