--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_barbican_integration.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_barbican_integration.yaml
@@ -272,6 +272,8 @@ spec:
         cron_service_cleaner: true
         cron_volume_usage_audit: false
         ceph_conf: true
+        job_clean: true
+        statefulset_volume: true
         statefulset_backup: true
       pod:
         affinity:
