--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_non_sl.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_non_sl.yaml
@@ -100,6 +100,7 @@ spec:
             rbd_store_pool: images-hdd
             rbd_store_replication: 3
             rbd_store_user: glance
+            stores: rbd
           keystone_authtoken:
             memcache_secret_key: yXjj5J8Ad1hHdCCh
             memcache_security_strategy: ENCRYPT
