--- a/tests/fixtures/render_service_template/output/image/ussuri_lvm_lvm_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_lvm_lvm_non_dvr.yaml
@@ -63,9 +63,6 @@ spec:
               source_url: 'https://amphora-image-url/latest'
               tags:
                 - amphora
-      ceph_client:
-        configmap: rook-ceph-config
-        user_secret_name: glance-rbd-keyring
       network:
         api:
           ingress:
@@ -81,12 +78,7 @@ spec:
           01-controller-default.yaml: {'image_rule1': 'image_value1'}
           02-custom.yaml: {}
         ceph:
-          config:
-            global:
-              mon_host:
-                - "10.10.10.1:6789"
-                - "10.10.10.2:6789"
-                - "10.10.10.3:6789"
+          enabled: false
         glance:
           DEFAULT:
             enable_v2_registry: true
@@ -307,9 +299,3 @@ spec:
         replicas:
           api: 1
           registry: 1
-      secrets:
-        rbd: glance-rbd-keyring
-      storage: rbd
-      volume:
-        class_name: rook-ceph-block
-        size: 2Gi
