Enable coordination for Nova
Related-PRODX: PRODX-26667
Change-Id: I4ce1d408aabbc65236fdcb8d903993037237e5cb

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -2,6 +2,7 @@
 #kind: HelmBundle
 
 {%- from 'macros/messaging_service_creds.j2' import messaging_service_creds %}
+{%- from 'macros/etcd3.j2' import get_etcd3_endpoint %}
 {%- set service = 'nova' %}
 {%- set components_with_dedicated_messaging = spec.get('features', {}).get('messaging', {}).get('components_with_dedicated_messaging', []) %}
 {%- set stacklight_enabled = spec.get('features', {}).get('stacklight', {}).get('enabled', False) %}
@@ -776,6 +777,8 @@ spec:
           vnc:
             auth_schemes: vencrypt,none
         {%- endif %}
+          coordination:
+            backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
       {%- if baremetal_enabled %}
         nova_ironic:
           DEFAULT:
