--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_barbican_integration.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_barbican_integration.yaml
@@ -115,6 +115,8 @@ spec:
           glance:
             verify_glance_signatures: true
             enable_certificate_validation: true
+          coordination:
+            backend_url: 'etcd3+http://etcd:2379'
         nova_ironic:
           DEFAULT:
             compute_driver: ironic.IronicDriver
