--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_ironic.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_ironic.yaml
@@ -112,6 +112,8 @@ spec:
             topics: notifications,stacklight_notifications
           service_user:
             send_service_user_token: true
+          coordination:
+            backend_url: 'etcd3+http://etcd:2379'
         nova_ironic:
           DEFAULT:
             compute_driver: ironic.IronicDriver
