Add cloudprober service
Cloudprober is an exporter for prometheus which
allows to monitor cloud workloads. By default
it uses openstack discovery which dynamically
generates targets from openstack instances
floating ips.

Related-Prod: https://mirantis.jira.com/browse/PRODX-31350
Change-Id: I73a384b0258398a337935f82b389ebd07761cb9f

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -649,6 +649,7 @@ properties:
           type: string
           enum:
             - block-storage
+            - cloudprober
             - compute
             - identity
             - dashboard
@@ -675,6 +676,22 @@ properties:
             - metric
             - instance-ha
             - shared-file-system
+      cloudprober:
+        type: object
+        additionalProperties: false
+        properties:
+          discovery:
+            type: object
+            additionalProperties: false
+            description: >
+              Defines parameters of openstack resources discovery
+              and targets generation for cloudprober.
+            properties:
+              interval:
+                type: number
+                description: >
+                  Default interval in seconds between runs of openstack resources discovery.
+                  default: 600.
       nova:
         type: object
         additionalProperties: false
