--- a/openstack_controller/templates/rocky/artifacts.yaml
+++ b/openstack_controller/templates/rocky/artifacts.yaml
@@ -9,6 +9,8 @@ cinder_scheduler: '{{ images_base_url }}/openstack/cinder:rocky-bionic-202302270
 cinder_volume: '{{ images_base_url }}/openstack/cinder:rocky-bionic-20230227093206'
 cinder_volume_daemonset: '{{ images_base_url }}/openstack/cinder:rocky-bionic-20230227093206'
 cinder_volume_usage_audit: '{{ images_base_url }}/openstack/cinder:rocky-bionic-20230227093206'
+cloudprober: '{{ images_base_url }}/openstack/extra/cloudprober:v0.12.6'
+cloudprober_openstack_discovery: '{{ images_base_url }}/openstack/openstack-tools:yoga-focal-20230414111326'
 db_drop: '{{ images_base_url }}/openstack/heat:rocky-bionic-20230227093206'
 db_init: '{{ images_base_url }}/openstack/heat:rocky-bionic-20230227093206'
 dep_check: '{{ images_base_url }}/openstack/extra/kubernetes-entrypoint:v1.0.1-de7c287-20230321181457'
