--- a/openstack_controller/templates/ussuri/artifacts.yaml
+++ b/openstack_controller/templates/ussuri/artifacts.yaml
@@ -9,6 +9,8 @@ cinder_scheduler: '{{ images_base_url }}/openstack/cinder:ussuri-bionic-20230227
 cinder_volume: '{{ images_base_url }}/openstack/cinder:ussuri-bionic-20230227093206'
 cinder_volume_daemonset: '{{ images_base_url }}/openstack/cinder:ussuri-bionic-20230227093206'
 cinder_volume_usage_audit: '{{ images_base_url }}/openstack/cinder:ussuri-bionic-20230227093206'
+cloudprober: '{{ images_base_url }}/openstack/extra/cloudprober:v0.12.6'
+cloudprober_openstack_discovery: '{{ images_base_url }}/openstack/openstack-tools:yoga-focal-20230414111326'
 stepler_run_tests: '{{ images_base_url }}/openstack/stepler:ussuri-bionic-20221027094817'
 db_drop: '{{ images_base_url }}/openstack/heat:ussuri-bionic-20230227093206'
 db_init: '{{ images_base_url }}/openstack/heat:ussuri-bionic-20230227093206'
