--- a/openstack_controller/templates/xena/artifacts.yaml
+++ b/openstack_controller/templates/xena/artifacts.yaml
@@ -9,6 +9,8 @@ cinder_scheduler: '{{ images_base_url }}/openstack/cinder:xena-focal-20230407193
 cinder_volume: '{{ images_base_url }}/openstack/cinder:xena-focal-20230407193233'
 cinder_volume_daemonset: '{{ images_base_url }}/openstack/cinder:xena-focal-20230407193233'
 cinder_volume_usage_audit: '{{ images_base_url }}/openstack/cinder:xena-focal-20230407193233'
+cloudprober: '{{ images_base_url }}/openstack/extra/cloudprober:v0.12.6'
+cloudprober_openstack_discovery: '{{ images_base_url }}/openstack/openstack-tools:yoga-focal-20230414111326'
 stepler_run_tests: '{{ images_base_url }}/openstack/stepler:victoria-bionic-20211129123730'
 db_drop: '{{ images_base_url }}/openstack/heat:xena-focal-20230407193233'
 db_init: '{{ images_base_url }}/openstack/heat:xena-focal-20230407193233'
