--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -39,6 +39,8 @@ images:
   cinder_volume: cinder-volume:latest
   cinder_volume_usage_audit: cinder-volume-usage-audit:latest
   cinder_service_cleaner: cinder-service-cleaner:latest
+  cloudprober: cloudprober:latest
+  cloudprober_openstack_discovery: cloudprober-openstack-discovery:latest
   create_resources: create-resources:latest
   stepler_run_tests: stepler-run-tests:latest
   db_drop: db-drop:latest
