Allow to enable secure live migration with TLS
Generate CA certs for libvirt server

Related-Prod: PRODX-31446
Change-Id: Ia710c83556fdc864d8b99c6606696e57037032a1

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -713,6 +713,17 @@ properties:
                 type: number
               ram:
                 type: number
+          libvirt:
+            type: object
+            additionalProperties: false
+            properties:
+              tls:
+                type: object
+                additionalProperties: false
+                properties:
+                  enabled:
+                    type: boolean
+                    description: "Enabled libvirt to listen on tls and secure live migration with QEMU-native TLS"
           live_migration_interface:
             type: string
             description: "Physical interface used for live migration."
