--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr.yaml
@@ -270,6 +270,7 @@ spec:
         job_drop_default_volume_type: true
         cron_volume_usage_audit: false
         ceph_conf: true
+        statefulset_backup: true
       pod:
         affinity:
           anti:
