--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_db_cleanup.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_db_cleanup.yaml
@@ -270,6 +270,7 @@ spec:
         cron_job_db_purge: true
         cron_volume_usage_audit: false
         ceph_conf: true
+        statefulset_backup: true
       pod:
         affinity:
           anti:
