--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_local_proxy.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_local_proxy.yaml
@@ -272,6 +272,7 @@ spec:
         cron_service_cleaner: true
         cron_volume_usage_audit: false
         ceph_conf: true
+        statefulset_backup: true
       pod:
         affinity:
           anti:
