Fix identity config template for strict admin
the name of the OsDpl option eventually became `strict_admin`,
not `strict_admin_polocies`.

Related-Issue: PRODX-28250
Change-Id: I53cf420fa07aeafdf9e6ac122ae9c322d3e469ff

--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_policies/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_policies/context_spec.yaml
@@ -1,6 +1,8 @@
 openstack_version: ussuri
 features:
   policies:
+    strict_admin:
+      enabled: true
     aodh:
       aodh_custom: value
     barbican:
