--- a/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_policies.yaml
@@ -28,6 +28,9 @@ spec:
             backend: oslo_cache.memcache_pool
           oslo_messaging_notifications:
             topics: notifications,stacklight_notifications
+          resource:
+            admin_project_name: admin
+            admin_project_domain_name: Default
         logging:
           logger_keystone:
             level: INFO
