--- a/openstack_controller/templates/services/identity.yaml
+++ b/openstack_controller/templates/services/identity.yaml
@@ -145,7 +145,7 @@ spec:
             backend: oslo_cache.memcache_pool
           oslo_messaging_notifications:
             topics: {{ notification_topics|join(',') }}
-{%- if spec.get("features", {}).get("policies", {}).get("strict_admin_policy", {}).get('enabled') %}
+{%- if spec.get("features", {}).get("policies", {}).get("strict_admin", {}).get('enabled') %}
           resource:
             admin_project_name: admin
             admin_project_domain_name: Default
