Pass memcache_secret_key value from controller
Related-Prod: PRODX-31711
Change-Id: I9a8973e452b47935ccbdb957cb5231c71b3303df

--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_template_args.yaml
@@ -428,6 +428,7 @@ shared-file-system:
       test:
         password: FfYMQLEZJ5fLRz32VzawQ9I7ezMJGVw6
         username: testFrbP
+    memcached: JinzIdQzLdIslgxu
   keystone_creds:
     cinder:
       password: Heh1rJglWv6gZ7DbbemCQEEZedy9eEYa
