--- a/openstack_controller/templates/services/shared-file-system.yaml
+++ b/openstack_controller/templates/services/shared-file-system.yaml
@@ -164,6 +164,9 @@ spec:
           01-controller-default.yaml: {{ service_policy }}
           02-custom.yaml: {{ spec.get("features", {}).get("policies", {}).get("manila", {}) }}
         manila:
+          keystone_authtoken:
+            memcache_security_strategy: ENCRYPT
+            memcache_secret_key: {{ credentials[0].memcached }}
           coordination:
             backend_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
 {%- if cadf_audit.enabled %}
