--- a/openstack_controller/templates/services/tempest.yaml
+++ b/openstack_controller/templates/services/tempest.yaml
@@ -155,6 +155,7 @@ spec:
             --gateway 10.20.40.1 \
             --network tempest-fixed-net
 {%- endif %}
+{%- if spec.openstack_version not in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'wallaby', 'xena'] %}
 {%- raw %}
           {{- if not .Values.conf.tempest.DEFAULT.production }}
           function ensure_tld_present {
@@ -165,6 +166,7 @@ spec:
           done
           {{- end }}
 {%- endraw %}
+{%- endif %}
       conf:
         static_accounts:
           project_count: 25
